--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -23,11 +23,7 @@ mqtt_user: username
 mysql_db: mysql://user:password@example.domain.com/database?charset=utf8
 name_1: jim
 notify_ios: notify.some_phone
-path_fail2ban: /tmp/diskinfo/fail2ban.log
-path_disk_1: /tmp/diskinfo/diskinfo1.txt
-path_disk_2: /tmp/diskinfo/diskinfo2.txt
-path_disk_3: /tmp/diskinfo/diskinfo3.txt
-path_disk_4: /tmp/diskinfo/diskinfo4.txt
+path_fail2ban: /tmp/fail2ban.log
 person_1: person.jim
 person_1_id: jim
 person_1_name: Jim
@@ -40,7 +36,7 @@ robovac_ip: 127.0.0.1
 robovac_localkey: password
 router_ip: 127.0.0.1
 router_login: username
-router_ssh: /tmp/diskinfo/sshkey
+router_ssh: /tmp/sshkey
 rpi_ip: 127.0.0.1
 rpi_shutdown_command: 'touch myass'
 ssl_domain: example.com
