--- a/config/sensor/mqtt.yaml
+++ b/config/sensor/mqtt.yaml
@@ -108,3 +108,58 @@
   state_topic: "miflora/YuccaAloifolia"
   value_template: "{{ value_json.battery }}"
   unit_of_measurement: "%"
+
+- platform: mqtt
+  name: disk_use_percent_lv
+  state_topic: 'telegraf/intelnuc/disk'
+  unit_of_measurement: '%'
+  value_template: >-
+    {% if value_json['tags'].device == 'mapper/ubuntu--vg-ubuntu--lv' %}
+      {{ (value_json['fields'].used_percent | float) | round(2) }}
+    {% else %}
+      {{ states('sensor.disk_use_percent_lv') }}
+    {% endif %}
+
+- platform: mqtt
+  name: disk_use_percent_lv0
+  state_topic: 'telegraf/intelnuc/disk'
+  unit_of_measurement: '%'
+  value_template: >-
+    {% if value_json['tags'].device == 'mapper/ubuntu--vg-lv--0' %}
+      {{ (value_json['fields'].used_percent | float) | round(2) }}
+    {% else %}
+      {{ states('sensor.disk_use_percent_lv0') }}
+    {% endif %}
+
+- platform: mqtt
+  name: disk_use_percent_lv1
+  state_topic: 'telegraf/intelnuc/disk'
+  unit_of_measurement: '%'
+  value_template: >-
+    {% if value_json['tags'].device == 'mapper/ubuntu--vg-lv--1' %}
+      {{ (value_json['fields'].used_percent | float) | round(2) }}
+    {% else %}
+      {{ states('sensor.disk_use_percent_lv1') }}
+    {% endif %}
+
+- platform: mqtt
+  name: disk_use_percent_sda1
+  state_topic: 'telegraf/intelnuc/disk'
+  unit_of_measurement: '%'
+  value_template: >-
+    {% if value_json['tags'].device == 'sda1' %}
+      {{ (value_json['fields'].used_percent | float) | round(2) }}
+    {% else %}
+      {{ states('sensor.disk_use_percent_sda1') }}
+    {% endif %}
+
+- platform: mqtt
+  name: disk_use_percent_sda2
+  state_topic: 'telegraf/intelnuc/disk'
+  unit_of_measurement: '%'
+  value_template: >-
+    {% if value_json['tags'].device == 'sda2' %}
+      {{ (value_json['fields'].used_percent | float) | round(2) }}
+    {% else %}
+      {{ states('sensor.disk_use_percent_sda2') }}
+    {% endif %}
