--- a/config/lovelace/views/01-home.yaml
+++ b/config/lovelace/views/01-home.yaml
@@ -1024,6 +1024,37 @@
                 card:
                   - width: 5px
                   - height: 80px
+            - type: 'custom:button-card'  # Blinds
+              icon: 'mdi:window-closed'
+              show_icon: true
+              show_name: false
+              style: |
+                ha-card {
+                  box-shadow: var(--softui-standard-boxshadow);
+                }
+              styles:
+                card:
+                  - width: 55px
+                  - height: 55px
+                  - border-radius: 15px
+                  - background-color: var(--primary-background-color)
+                icon:
+                  - color: var(--primary-text-color)
+              tap_action:
+                action: navigate
+                navigation_path: /lovelace/blinds
+            - type: 'custom:button-card'  # Spacer
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 80px
             - type: 'custom:button-card'  # Plants
               icon: 'mdi:sprout'
               show_icon: true
