--- a/config/lovelace/views/07-settings.yaml
+++ b/config/lovelace/views/07-settings.yaml
@@ -145,6 +145,71 @@
                 card:
                   - width: 5px
                   - height: 60px
+        - type: markdown
+          content: |
+            # Vacuum automation
+          style: |
+            ha-card {
+             height: 50px;
+             --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+             box-shadow: 2px 2px rgba(0,0,0,0.0);
+            }
+            h1 {
+              font-size: 14px;
+              font-weight: thin;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: horizontal-stack
+          cards:
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 60px
+            - type: entities
+              # title: Anderes
+              show_header_toggle: false
+              entities:
+                - type: custom:multiple-entity-row
+                  entity: input_datetime.vacuum_schedule_1_to
+                  name: Main schedule
+                  entities:
+                    - entity: input_datetime.vacuum_schedule_1_from
+                      name: false
+                - type: custom:multiple-entity-row
+                  entity: input_datetime.vacuum_schedule_2_to
+                  name: Afternoon schedule
+                  entities:
+                    - entity: input_datetime.vacuum_schedule_2_from
+                      name: false
+                - entity: input_boolean.vacuum_weekends
+                  name: Vacuum on weekends/holidays
+              style: |
+                ha-card {
+                  --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                  border-radius: 15px;
+                  box-shadow: var(--softui-standard-boxshadow);
+                }
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+                box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 60px
         - type: 'custom:button-card'
           show_icon: false
           show_name: false
