add owm secret for github actions

--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -1,7 +1,7 @@
 ---
 # redacted secrets file
 
-darksky_ak: top1secretapikey
+owm_ak: top1secretapikey
 device1: device_tracker.device_1
 device2: device_tracker.device_2
 dnsip_hostname: example.domain.com
